--- a/Tareas/Tarea4/estilos_carreras.css
+++ b/Tareas/Tarea4/estilos_carreras.css
@@ -1,54 +1,85 @@
 body {
     font-family: 'Arial', sans-serif;
-    background-color: #FFFFFF;
+    background-color: #F5F5F5; /* Un fondo más claro que el blanco para tener un poco de contraste */
     color: #000000;
-    text-align: center;
     margin: 0;
     padding: 0;
     height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
-    flex-direction: column;
 }
 
-.container {
-   margin: 2px solid #000000;
-    background-color: #FFFFFF;
+.main-container {
+    background-color:papayawhip; /* Fondo blanco para el contenedor principal */
+    padding: 40px;
+    border-radius: 10px;
+    box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.1); /* Sombra para darle profundidad */
+    width: 80%;
+    max-width: 500px;
+    text-align: center;
+    flex-wrap: wrap;
+    border: #000000 solid 2px;
 }
 
 h1 {
     font-size: 28px;
-    margin-bottom: 30px;
+    margin-bottom: 40px;
     letter-spacing: 2px;
 }
 
-.links {
+.button-container {
     display: flex;
     justify-content: space-between;
+    margin-top: 20px;
+    align-items: center;
 }
 
-a {
-    flex: 1;
-    margin: 5px;
-    padding: 15px 30px;
+.option-button {
     text-decoration: none;
-    color: #FFFFFF;
     background-color: #000000;
+    color: #FFFFFF;
+    padding: 15px 30px;
     border-radius: 5px;
-    transition: background-color 0.3s, color 0.3s;
     font-weight: bold;
-    letter-spacing: 1px;
-    text-align: center;
+    transition: background-color 0.3s, color 0.3s;
 }
 
-a:hover {
+.option-button:hover {
     background-color: #FFFFFF;
     color: #000000;
     border: 2px solid #000000;
 }
 
-.pink
-{
-    background-color: pink;
+.styled-table {
+    width: 100%;
+    max-width: 600px;
+    border-collapse: collapse;
+    margin: 25px 0;
+    font-size: 0.9em;
+    text-align: left;
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
+}
+
+.styled-table thead tr {
+    background-color: #000000;
+    color: #FFFFFF;
+    text-align: left;
+}
+
+.styled-table th,
+.styled-table td {
+    padding: 10px 15px;
+    border-bottom: 1px solid #dddddd;
+}
+
+.styled-table tbody tr:nth-of-type(even) {
+    background-color: #f3f3f3;
+}
+
+.no-data {
+    text-align: center;
+    padding: 20px;
+    background-color: #ffcccc;
+    margin-top: 20px;
 }
