--- a/Ejercicios de Examen/Ejercicio1/ejercicio1.css
+++ b/Ejercicios de Examen/Ejercicio1/ejercicio1.css
@@ -35,6 +35,10 @@
     align-items:flex-start;
 }
 
+.main{
+    width: 780px;
+    padding: 15px;
+}
 .buttons{
    width: 120px;
    background-color: darkslategrey;
@@ -61,4 +65,18 @@
     background-color: white;
     color: black;
     text-decoration: none;
+}
+.footer1{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    border-bottom: 1px solid black;
+}
+
+.footer2{
+    width: 100%;
+    padding: 5px;
+    display: flex;
+    justify-content: center;
+    background-color: plum;
 }
