--- a/Tema4/DOM/styles.css
+++ b/Tema4/DOM/styles.css
@@ -1,3 +1,6 @@
-.border-derecho{
-    
+.borde-derecho{
+    border-right: 1px solid black;
+}
+.borde-superior{
+    border-top: 1px solid black;
 }
